--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -96,7 +96,22 @@
     width: 500px;
   }
 
+  #title {
+    font-size: 23px;
+    margin: 40px 0 0 0;
+  }
+
   #backdrop {
     
   }
 }
+
+/* @media(max-width: 400px) {
+  .homeContainer {
+    width: 300px;
+  }
+
+  #backdrop {
+    
+  }
+} */
