--- a/frontend/src/styles/Keyboard.module.css
+++ b/frontend/src/styles/Keyboard.module.css
@@ -104,8 +104,28 @@
   background: rgb(210, 210, 210);
 }
 
-@media(max-width: 576px) {
+@media(max-width: 430px) {
   .boardContainer {
-    /* width: 300px; */
+    width: 200px;
+  }
+
+  .topRow, 
+  .middleRow,
+  .bottomRow {
+    width: 100px;
+  }
+
+  .letter,
+  .special {
+    padding: 10px 7px;
+    margin: 2px;
+    font-size: 0.8rem;
+  }
+
+  .special {
+    font-size: 0.6rem;
+    padding: 6px;
   }
 }
+
+/* @media(max-width:) */
