--- a/frontend/src/styles/Navbar.module.css
+++ b/frontend/src/styles/Navbar.module.css
@@ -147,3 +147,33 @@
   }
   
 }
+
+@media(max-width: 430px) {
+  .navContainer {
+    padding: 65px 0 0 0;
+  }
+
+  .containerDark,
+  .containerLight {
+    left: 20%;
+  }
+
+  .userButtonContainer {
+    right: 44%;
+  }
+
+  .flag {
+    width: 23px;
+  }
+
+  .changeContent {
+    gap: 5px;
+    font-size: 0.8rem;
+  }
+
+  .containerDark,
+  .containerLight {
+    width: 70px;
+    text-align: center;
+  }  
+}
