--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -24,6 +24,12 @@ body {
   /* font-size: 1.2rem; */
 }
 
+@media(max-width: 430px) {
+  body {
+    padding: 20px 0 0 0;
+  }
+}
+
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
