--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -7,6 +7,9 @@
   z-index: 99;
   background-color: rgba(0, 0, 0, 0.5);
   pointer-events: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
