--- a/frontend/src/styles/Home.module.css
+++ b/frontend/src/styles/Home.module.css
@@ -13,6 +13,31 @@
 }
 
 
+
+.lengthText {
+  position: fixed;
+  left: 50%;
+  transform: translate(-50%, 0);
+  z-index: 2;
+  opacity: 0;
+  transition: 6.0s ease-in-out;
+  padding: 10px;
+  border-radius: 2px;
+}
+
+.lengthText.lengthErrorText {
+  opacity: 1;
+}
+
+.errorTextDark {
+  color: black;
+  background: white;
+}
+.errorTextLight {
+  color: white;
+  background: black;
+}
+
 #title {
   margin: 20px 0 0 0;
   text-align: center;
