--- a/frontend/src/styles/Keyboard.module.css
+++ b/frontend/src/styles/Keyboard.module.css
@@ -113,25 +113,19 @@
 
 @media(max-width: 430px) {
   .boardContainer {
-    width: 200px;
-  }
-
-  .topRow, 
-  .middleRow,
-  .bottomRow {
-    width: 100px;
+    width: 100%;
   }
 
   .letter,
   .special {
-    padding: 15px 12px;
+    padding: 15px 14px;
     margin: 2px;
     font-size: 0.9rem;
   }
 
   .special {
-    font-size: 0.6rem;
-    padding: 6px;
+    font-size: 0.7rem;
+    padding: 10px;
   }
 }
 
