--- a/frontend/src/styles/Keyboard.module.css
+++ b/frontend/src/styles/Keyboard.module.css
@@ -113,7 +113,7 @@
 
 @media(max-width: 430px) {
   .boardContainer {
-    width: 100%;
+    /* width: 100%; */
   }
 
   .row {
@@ -122,7 +122,7 @@
 
   .letter,
   .special {
-    padding: 23px 14px;
+    padding: 23px 12px;
     margin: 2px;
     font-size: 0.9rem;
   }
