--- a/frontend/src/styles/globals.css
+++ b/frontend/src/styles/globals.css
@@ -31,6 +31,12 @@ body {
   }
 }
 
+@media(max-width: 400px) {
+  body {
+    width: 350px;
+  }
+}
+
 /* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
