--- a/frontend/src/styles/Keyboard.module.css
+++ b/frontend/src/styles/Keyboard.module.css
@@ -123,16 +123,15 @@
     gap: 0.5px;
   }
 
-  .letter,
-  .special {
-    padding: 23px 13px;
+  .letter {
+    padding: 23px 15px;
     margin: 2px;
     font-size: 0.9rem;
   }
 
   .special {
     font-size: 0.7rem;
-    padding: 10px;
+    padding: 10px 14px;
   }
 }
 
